[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/minigames/elevator_ride/elevator_ride.gd" type="Script" id=1]
[ext_resource path="res://entities/elevator/elevator.tscn" type="PackedScene" id=2]
[ext_resource path="res://entities/building_floor/building_floor.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/failure_markers/failure_markers.tscn" type="PackedScene" id=4]

[sub_resource type="SegmentShape2D" id=1]
a = Vector2( 0, -12 )
b = Vector2( 0, 12 )

[node name="ElevatorRide" type="Node2D"]
script = ExtResource( 1 )

[node name="Road" type="Polygon2D" parent="."]
position = Vector2( 272, 272 )
color = Color( 0.14902, 0.14902, 0.14902, 1 )
polygon = PoolVector2Array( 16, 4, 16, -4, -152, -4, -152, 4 )

[node name="BuildingFloor" parent="." instance=ExtResource( 3 )]
position = Vector2( 312, 100 )
level = "L5"

[node name="BuildingFloor2" parent="." instance=ExtResource( 3 )]
position = Vector2( 312, 132 )
level = "L4"

[node name="BuildingFloor3" parent="." instance=ExtResource( 3 )]
position = Vector2( 312, 164 )
level = "L3"

[node name="BuildingFloor4" parent="." instance=ExtResource( 3 )]
position = Vector2( 312, 196 )
level = "L2"

[node name="BuildingFloor5" parent="." instance=ExtResource( 3 )]
position = Vector2( 312, 228 )
level = "L1"

[node name="BuildingFloor6" parent="." instance=ExtResource( 3 )]
position = Vector2( 312, 260 )
level = "G"

[node name="SpawnPoint" type="Position2D" parent="."]
position = Vector2( 136, 268 )

[node name="WaitPoint" type="Position2D" parent="."]
position = Vector2( 312, 268 )

[node name="Elevator" parent="." instance=ExtResource( 2 )]
position = Vector2( 312, 68 )

[node name="ElevatorDoor" type="Area2D" parent="."]
position = Vector2( 288, 256 )
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ElevatorDoor"]
shape = SubResource( 1 )

[node name="TargetLevel" type="Label" parent="."]
margin_left = 264.0
margin_top = 244.0
margin_right = 304.0
margin_bottom = 258.0
text = "-"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_top = 20
custom_constants/margin_left = 20

[node name="FailureMarkers" parent="CanvasLayer/MarginContainer" instance=ExtResource( 4 )]
unique_name_in_owner = true
margin_left = 20.0
margin_top = 20.0
margin_right = 128.0
margin_bottom = 52.0
rect_min_size = Vector2( 108, 32 )
size_flags_horizontal = 0
size_flags_vertical = 0

[connection signal="failed" from="." to="." method="_on_ElevatorRide_end" binds= [ -1 ]]
[connection signal="passed" from="." to="." method="_on_ElevatorRide_end" binds= [ 1 ]]
[connection signal="floor_reached" from="Elevator" to="." method="_on_Elevator_floor_reached"]
[connection signal="area_entered" from="ElevatorDoor" to="." method="_on_ElevatorDoor_area_entered"]
